Fix: Search input width preventing settings button display

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         .search-box input {
             border: none;
             background: transparent;
-            width: 100%;
+            flex: 1;
             font-size: 16px;
             color: var(--text-main);
             outline: none;
