--- a/index.html
+++ b/index.html
@@ -1364,7 +1364,7 @@
             document.body.removeChild(textArea);
         }
 
-        function showToast(message) {
+        function showToast(message, duration = 3000, callback = null) {
             let toast = document.getElementById('toast-msg');
             if (!toast) {
                 toast = document.createElement('div');
@@ -1374,24 +1374,38 @@
                     bottom: 80px;
                     left: 50%;
                     transform: translateX(-50%);
-                    background: rgba(0,0,0,0.7);
+                    background: rgba(0,0,0,0.8);
                     color: white;
-                    padding: 8px 16px;
+                    padding: 10px 20px;
                     border-radius: 20px;
                     font-size: 14px;
+                    text-align: center;
                     z-index: 3000;
                     opacity: 0;
                     transition: opacity 0.3s;
                     backdrop-filter: blur(5px);
+                    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+                    cursor: default;
                 `;
                 document.body.appendChild(toast);
             }
-            toast.textContent = message;
+            toast.innerHTML = message;
             toast.style.opacity = '1';
+
+            if (callback) {
+                toast.style.cursor = 'pointer';
+                toast.onclick = () => {
+                    callback();
+                    toast.style.opacity = '0';
+                };
+            } else {
+                toast.style.cursor = 'default';
+                toast.onclick = null;
+            }
 
             setTimeout(() => {
                 toast.style.opacity = '0';
-            }, 4000);
+            }, duration);
 
         }
 
@@ -1615,10 +1629,37 @@
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('./sw.js')
-                    .then(reg => console.log('SW Registered!', reg))
+                    .then(reg => {
+                        console.log('SW Registered!', reg);
+
+                        // Check for updates
+                        reg.addEventListener('updatefound', () => {
+                            const newWorker = reg.installing;
+                            newWorker.addEventListener('statechange', () => {
+                                if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
+                                    // New update available
+                                    showToast('發現新版本！點此更新 <i class="fas fa-sync-alt"></i>', 60000, () => {
+                                        newWorker.postMessage({ action: 'skipWaiting' });
+                                    });
+                                }
+                            });
+                        });
+                    })
                     .catch(err => console.log('SW Failed:', err));
+
+                // Reload when new SW takes control
+                let refreshing;
+                navigator.serviceWorker.addEventListener('controllerchange', () => {
+                    if (refreshing) return;
+                    window.location.reload();
+                    refreshing = true;
+                });
             });
         }
+
+        // Expose updateToast helper slightly differently if needed via showToast onclick logic
+        // But our showToast is simple. Let's make sure showToast supports click callback.
+
 
 
 
