--- a/index.html
+++ b/index.html
@@ -27,20 +27,30 @@
 
     <style>
         :root {
-            --primary-color: #007AFF;
-            /* Apple Blue */
-            --accent-color: #FCCE02;
-            /* Yellow */
+            --primary-color: #FF385C;
+            /* Premium Coral Red */
+            --primary-dark: #D92042;
+            --accent-color: #FFB400;
+            /* Warm Gold */
             --surface: #ffffff;
-            --text-main: #1c1c1e;
-            --text-sub: #8e8e93;
-            --danger: #FF3B30;
-            --success: #34C759;
-            --radius-card: 16px;
-            --radius-pill: 20px;
-            --shadow-card: 0 4px 16px rgba(0, 0, 0, 0.12);
+            --background: #F7F8FA;
+            /* Cooler Light Grey */
+            --text-main: #1F2937;
+            /* Dark Grey-Blue */
+            --text-sub: #6B7280;
+            /* Cool Grey */
+            --danger: #EF4444;
+            --success: #10B981;
+            --radius-card: 20px;
+            /* Softer corners */
+            --radius-pill: 50px;
+            --shadow-card: 0 10px 40px -10px rgba(0, 0, 0, 0.08);
+            /* Sophisticated Shadow */
+            --shadow-float: 0 12px 36px -8px rgba(255, 56, 92, 0.3);
+            /* Colored Glow */
             --safe-area-top: env(safe-area-inset-top, 20px);
             --safe-area-bottom: env(safe-area-inset-bottom, 20px);
+            --font-main: 'Noto Sans TC', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
         }
 
         * {
@@ -56,7 +66,7 @@
             width: 100%;
             height: 100%;
             overflow: hidden;
-            background: #f2f2f7;
+            background: var(--background);
         }
 
         /* Full Screen Loading */
@@ -457,6 +467,7 @@
             display: -webkit-box;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
+            line-clamp: 2;
             overflow: hidden;
             margin-bottom: 16px;
         }
@@ -667,10 +678,11 @@
 
         .card-body-text {
             font-size: 13px;
-            color: var(--text-sub);
+            /* Text truncation fix */
             display: -webkit-box;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
+            line-clamp: 2;
             overflow: hidden;
             line-height: 1.4;
         }
@@ -749,47 +761,46 @@
     <div id="map"></div>
 
     <div id="settings-modal" onclick="if(event.target === this) closeSettings()"
-        style="display:none; position:fixed; inset:0; z-index:10000; background:rgba(0,0,0,0.5); align-items:center; justify-content:center;">
+        style="display:none; position:fixed; inset:0; z-index:10000; background:rgba(0,0,0,0.4); backdrop-filter:blur(8px); -webkit-backdrop-filter:blur(8px); align-items:center; justify-content:center;">
         <div
-            style="background:white; width:90%; max-width:400px; border-radius:16px; padding:24px; box-shadow:0 10px 25px rgba(0,0,0,0.2);">
-            <h3 style="margin-bottom:16px; font-size:18px;">資料來源設定</h3>
-            <p style="font-size:14px; color:#666; margin-bottom:12px;">請輸入 Google Sheet 的分享連結或 JSONP 網址：</p>
+            style="background:var(--surface); width:90%; max-width:400px; border-radius:var(--radius-card); padding:28px; box-shadow:var(--shadow-card);">
+            <h3 style="margin-bottom:20px; font-size:20px; color:var(--text-main); font-weight:700;">資料來源設定</h3>
+            <p style="font-size:14px; color:var(--text-sub); margin-bottom:16px;">請輸入 Google Sheet 的分享連結或 JSONP 網址：</p>
 
             <div
-                style="margin-bottom:16px; padding:12px; background:#f0f9ff; border-radius:8px; border:1px solid #bae6fd;">
-                <p style="font-size:13px; color:#0369a1; margin-bottom:4px; font-weight:500;">
+                style="margin-bottom:20px; padding:16px; background:var(--background); border-radius:12px; border:1px solid rgba(0,0,0,0.05);">
+                <p style="font-size:13px; color:var(--text-main); margin-bottom:6px; font-weight:600;">
                     <i class="fas fa-file-csv" style="margin-right:4px;"></i> 建立新資料？
                 </p>
-                <p style="font-size:12px; color:#0c4a6e; margin-bottom:8px;">
+                <p style="font-size:12px; color:var(--text-sub); margin-bottom:12px;">
                     下載欄位規範範本，填寫後匯入 Google Sheet 即可。
                 </p>
                 <button onclick="downloadCsvTemplate()"
-                    style="background:#0284c7; color:white; border:none; padding:6px 12px; border-radius:14px; font-size:12px; cursor:pointer;">
+                    style="background:var(--text-main); color:white; border:none; padding:8px 16px; border-radius:20px; font-size:12px; cursor:pointer; font-weight:600; box-shadow:0 4px 12px rgba(0,0,0,0.1);">
                     <i class="fas fa-download"></i> 下載 CSV 範本
                 </button>
             </div>
             <input type="text" id="sheet-url-input" placeholder="https://docs.google.com/spreadsheets/..."
-                style="width:100%; padding:10px; border:1px solid #ddd; border-radius:8px; margin-bottom:16px; font-size:14px;">
+                style="width:100%; padding:12px; border:1px solid #eee; background:var(--background); border-radius:12px; margin-bottom:20px; font-size:14px; color:var(--text-main); outline:none;">
 
-            <div style="display:flex; justify-content:space-between; gap:10px;">
+            <div style="display:flex; justify-content:space-between; gap:12px;">
                 <button onclick="resetSettings()"
-                    style="flex:1; padding:10px; border:none; background:#f2f2f7; color:#FF3B30; border-radius:8px; font-weight:500; cursor:pointer;">重置預設</button>
+                    style="flex:1; padding:12px; border:none; background:var(--background); color:var(--danger); border-radius:12px; font-weight:600; cursor:pointer;">重置</button>
                 <button onclick="closeSettings()"
-                    style="flex:1; padding:10px; border:none; background:#f2f2f7; color:#007AFF; border-radius:8px; font-weight:500; cursor:pointer;">取消</button>
+                    style="flex:1; padding:12px; border:none; background:var(--background); color:var(--text-sub); border-radius:12px; font-weight:600; cursor:pointer;">取消</button>
                 <button onclick="saveSettings()"
-                    style="flex:1; padding:10px; border:none; background:#007AFF; color:white; border-radius:8px; font-weight:500; cursor:pointer;">儲存</button>
+                    style="flex:1; padding:12px; border:none; background:var(--primary-color); color:white; border-radius:12px; font-weight:600; cursor:pointer; box-shadow:0 4px 12px rgba(255, 56, 92, 0.3);">儲存</button>
             </div>
 
             <!-- App Update Force -->
-            <div style="margin-top:16px; border-top:1px solid #eee; padding-top:16px; text-align:center;">
+            <div style="margin-top:20px; border-top:1px solid #eee; padding-top:20px; text-align:center;">
                 <button onclick="forceAppUpdate()"
-                    style="background:none; border:none; color:#999; font-size:12px; cursor:pointer;">
+                    style="background:none; border:none; color:var(--text-sub); font-size:12px; cursor:pointer; display:flex; align-items:center; justify-content:center; width:100%; gap:6px;">
                     <i class="fas fa-sync"></i> 檢查並更新應用程式
                 </button>
             </div>
 
         </div>
-    </div>
     </div>
     </div>
 
