Fix: Expose toggleFavoritesMode to window scope

--- a/index.html
+++ b/index.html
@@ -1478,7 +1478,7 @@
 
         }
 
-        function toggleFavoritesMode() {
+        window.toggleFavoritesMode = function () {
             isFavoritesMode = !isFavoritesMode;
             const btn = document.getElementById('btn-fav-toggle');
 
