--- a/schedule.html
+++ b/schedule.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>行程規劃 | Okinawa Food Guide</title>
+    <link rel="icon" href="icon.png" type="image/png">
+    <link rel="apple-touch-icon" href="icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap"
@@ -104,7 +106,11 @@
             <i class="fas fa-chevron-left" style="margin-right:8px;"></i> 回地圖
         </button>
         <h1 style="font-size:18px; font-weight:700;">我的行程</h1>
-        <div style="width:60px;"></div> <!-- Spacer -->
+        <div style="width:60px; display:flex; justify-content:flex-end;">
+            <button onclick="forceAppUpdate()"
+                style="background:none; border:none; color:var(--text-sub); font-size:16px; padding:8px;"><i
+                    class="fas fa-sync-alt"></i></button>
+        </div>
     </div>
 
     <div id="schedule-container" style="padding-bottom: 80px;">
@@ -150,7 +156,7 @@
                 let dayHTML = `
                     <div class="day-header">
                         <span>Day ${dayIndex + 1}</span>
-                        <button onclick="deleteDay(${dayIndex})" style="color:#999; border:none; background:none; font-size:14px;"><i class="far fa-trash-alt"></i></button>
+                        <button type="button" onclick="deleteDay(${dayIndex}, event)" style="color:#999; border:none; background:none; font-size:14px; padding:8px;"><i class="far fa-trash-alt"></i></button>
                     </div>
                 `;
 
@@ -199,12 +205,14 @@
             renderSchedule();
         }
 
-        function deleteDay(index) {
-            if (!confirm(`確定要刪除 Day ${index + 1} 嗎？`)) return;
+        function deleteDay(index, event) {
+            if (event) event.stopPropagation();
             let schedule = JSON.parse(localStorage.getItem('my_schedule') || '[]');
-            schedule.splice(index, 1);
-            localStorage.setItem('my_schedule', JSON.stringify(schedule));
-            renderSchedule();
+            if (index >= 0 && index < schedule.length) {
+                schedule.splice(index, 1);
+                localStorage.setItem('my_schedule', JSON.stringify(schedule));
+                renderSchedule();
+            }
         }
 
         function removeFromDay(dayIndex, itemIndex, e) {
@@ -217,6 +225,22 @@
 
         function viewLocation(uid) {
             window.location.href = `index.html?locate=${uid}`;
+        }
+
+        window.forceAppUpdate = function () {
+            if ('serviceWorker' in navigator) {
+                navigator.serviceWorker.getRegistrations().then(function (registrations) {
+                    for (let registration of registrations) {
+                        registration.unregister();
+                    }
+                    alert("已清除快取，正在重新載入...");
+                    setTimeout(() => {
+                        window.location.reload(true);
+                    }, 500);
+                });
+            } else {
+                window.location.reload(true);
+            }
         }
 
     </script>
