--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div style="margin-top:20px; border-top:1px solid #eee; padding-top:20px; text-align:center;">
                 <button onclick="forceAppUpdate()"
                     style="background:none; border:none; color:var(--text-sub); font-size:12px; cursor:pointer; display:flex; align-items:center; justify-content:center; width:100%; gap:6px;">
-                    <i class="fas fa-sync"></i> 檢查並更新應用程式
+                    <i class="fas fa-sync"></i> 檢查並更新應用程式 <span style="opacity:0.6;">(v9)</span>
                 </button>
             </div>
 
