Feat: Add Full Screen List View (v12)

--- a/index.html
+++ b/index.html
@@ -143,11 +143,19 @@
                     style="flex:1; padding:12px; border:none; background:var(--primary-color); color:white; border-radius:12px; font-weight:600; cursor:pointer; box-shadow:0 4px 12px rgba(255, 56, 92, 0.3);">儲存</button>
             </div>
 
+            <!-- List View Link -->
+            <div style="margin-top:20px; text-align:center;">
+                <button onclick="window.location.href='list.html'"
+                    style="width:100%; padding:14px; border:none; background:#f2f2f7; color:var(--text-main); border-radius:16px; font-weight:700; font-size:15px; display:flex; align-items:center; justify-content:center;">
+                    <i class="fas fa-list-ul" style="margin-right:8px;"></i> 切換至列表模式
+                </button>
+            </div>
+
             <!-- App Update Force -->
             <div style="margin-top:20px; border-top:1px solid #eee; padding-top:20px; text-align:center;">
                 <button onclick="forceAppUpdate()"
                     style="background:none; border:none; color:var(--text-sub); font-size:12px; cursor:pointer; display:flex; align-items:center; justify-content:center; width:100%; gap:6px;">
-                    <i class="fas fa-sync"></i> 檢查並更新應用程式 <span style="opacity:0.6;">(v11)</span>
+                    <i class="fas fa-sync"></i> 檢查並更新應用程式 <span style="opacity:0.6;">(v12)</span>
                 </button>
             </div>
 
