--- a/list.html
+++ b/list.html
@@ -230,6 +230,13 @@
     </div>
 
     <script src="data.js"></script>
+    <script src="swipe-nav.js"></script>
+    <script>
+        initSwipeNav({
+            left: () => { window.location.href = 'schedule.html'; },
+            right: () => { window.location.href = 'index.html'; }
+        });
+    </script>
     <script>
         let currentFilter = 'all';
         let currentSearch = '';
