--- a/schedule.html
+++ b/schedule.html
@@ -171,7 +171,7 @@
             <div style="margin-top:20px; border-top:1px solid #eee; padding-top:20px; text-align:center;">
                 <button onclick="forceAppUpdate()"
                     style="background:none; border:none; color:var(--text-sub); font-size:12px; cursor:pointer; display:flex; align-items:center; justify-content:center; width:100%; gap:6px;">
-                    <i class="fas fa-sync"></i> 檢查並更新應用程式 <span style="opacity:0.6;">(v17)</span>
+                    <i class="fas fa-sync"></i> 檢查並更新應用程式 <span style="opacity:0.6;">(v18)</span>
                 </button>
             </div>
         </div>
@@ -190,7 +190,7 @@
             <i class="fas fa-calendar-alt"></i>
             <span>行程</span>
         </button>
-        <button class="nav-item" onclick="openSettings()">
+        <button class="nav-item" onclick="openSettings(event)">
             <i class="fas fa-cog"></i>
             <span>設定</span>
         </button>
@@ -308,10 +308,13 @@
         }
 
         // --- Settings Logic --- //
-        function openSettings() {
-            document.getElementById('settings-modal').style.display = 'flex';
-            const currentUrl = localStorage.getItem('food_data_url') || "";
-            document.getElementById('sheet-url-input').value = currentUrl;
+        function openSettings(e) {
+            if (e) e.stopPropagation();
+            setTimeout(() => {
+                document.getElementById('settings-modal').style.display = 'flex';
+                const currentUrl = localStorage.getItem('food_data_url') || "";
+                document.getElementById('sheet-url-input').value = currentUrl;
+            }, 50);
         }
 
         function closeSettings() {
